# actix-web-getting-started

./: Cargo.toml
backend/: Cargo.toml
backend/src/: database.rs  lib.rs  main.rs  web_app.rs
backend/tests/: health_check.rs
