[package]
name = "backend"
version = "0.1.0"
authors = ["Sangchual CHA <sangchual.cha@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.18", features = ["json", "cookies", "rustls-tls"] }
sqlx =  { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
